syntax = "proto3";

package envoy.type.matcher.v3;

import "envoy/type/matcher/v3/metadata.proto";
import "envoy/type/matcher/v3/string.proto";

option java_package = "io.envoyproxy.envoy.type.matcher.v3";
option java_outer_classname = "NodeProto";
option java_multiple_files = true;

// [#protodoc-title:NodeMatcher]

// Specifies the way to match a Node.
message NodeMatcher {
  // Specifies match criteria on the node id.
  StringMatcher node_id = 1;
  // Specifies match criteria on the node metadata.
  MetadataMatcher node_metadata = 2;
}
